--- a/index.html
+++ b/index.html
@@ -1,86 +1,72 @@
 <!DOCTYPE html>
+<script src="https://d3js.org/d3.v7.min.js"></script>
+
+
 <html>
 <head>
 	<title>明日方舟角色DIY</title>
 </head>
 <body>
 	<h1>明日方舟角色DIY</h1>
-	<h2>基础属性</h2>
-	<ul>
-		<li>生命值：<input type="text" name="health" value="100"></li>
-		<li>攻击力：<input type="text" name="attack" value="50"></li>
-		<li>防御力：<input type="text" name="defense" value="20"></li>
-		<li>法术抗性：<input type="text" name="magic_resistance" value=""></li>
-		<li>阻挡数：<input type="text" name="block" value="1"></li>
-		<li>部署费用：<input type="text" name="cost" value="10"></li>
-		<li>再部署时间：
-			<select name="respawn_time">
-				<option value="very_fast">非常快</option>
-				<option value="fast">快</option>
-				<option value="medium">中等</option>
-				<option value="slow">慢</option>
-				<option value="very_slow">非常慢</option>
-			</select>
-		</li>
-		<li>攻击速度：
-			<select name="attack_speed">
-				<option value="very_fast">非常快</option>
-				<option value="fast">快</option>
-				<option value="medium">中等</option>
-				<option value="slow">慢</option>
-				<option value="very_slow">非常慢</option>
-			</select>
-		</li>
-	</ul>
-	<h2>技能设置区</h2>
-	<label for="skill_num">技能个数：</label>
-	<input type="number" id="skill_num" name="skill_num" min="0" max="3" value="0"><br><br>
-	<div id="skill_input"></div>
-	<script>
-		document.getElementById("skill_num").addEventListener("change", function() {
-			var skill_num = document.getElementById("skill_num").value;
-			var skill_input = document.getElementById("skill_input");
-			skill_input.innerHTML = "";
-			for (var i = 1; i <= skill_num; i++) {
-				skill_input.innerHTML += "<h3>技能" + i + "</h3><label for='skill_name_" + i + "'>技能名称：</label><input type='text' id='skill_name_" + i + "' name='skill_name_" + i + "'><br><label for='skill_description_" + i + "'>技能描述：</label><input type='text' id='skill_description_" + i + "' name='skill_description_" + i + "'><br><label for='skill_type_" + i + "'>技能类型：</label><select id='skill_type_" + i + "' name='skill_type_" + i + "'><option value='passive'>被动</option><option value='manual'>手动开启</option><option value='auto'>自动开启</option></select><br><div id='skill_parameter_" + i + "'></div><br>";
-				document.getElementById("skill_type_" + i).addEventListener("change", function() {
-					var skill_type = this.value;
-					var skill_parameter = document.getElementById("skill_parameter_" + this.id.slice(-1));
-					skill_parameter.innerHTML = "";
-					if (skill_type == "passive") {
-						skill_parameter.innerHTML += "<label for='skill_duration_" + this.id.slice(-1) + "'>持续时间：</label><input type='text' id='skill_duration_" + this.id.slice(-1) + "' name='skill_duration_" + this.id.slice(-1) + "'><br>";
-					} else if (skill_type == "manual" || skill_type == "auto") {
-						skill_parameter.innerHTML += "<label for='skill_initial_sp_" + this.id.slice(-1) + "'>初始技力：</label><input type='text' id='skill_initial_sp_" + this.id.slice(-1) + "' name='skill_initial_sp_" + this.id.slice(-1) + "'><br><label for='skill_sp_cost_" + this.id.slice(-1) + "'>技力需求：</label><input type='text' id='skill_sp_cost_" + this.id.slice(-1) + "' name='skill_sp_cost_" + this.id.slice(-1) + "'><br><label for='skill_duration_" + this.id.slice(-1) + "'>持续时间：</label><input type='text' id='skill_duration_" + this.id.slice(-1) + "' name='skill_duration_" + this.id.slice(-1) + "'><br><label for='skill_sp_recovery_" + this.id.slice(-1) + "'>技力恢复方式：</label><select id='skill_sp_recovery_" + this.id.slice(-1) + "' name='skill_sp_recovery_" + this.id.slice(-1) + "'><option value='hit'>受击恢复</option><option value='auto'>自动恢复</option><option value='attack'>攻击恢复</option></select><br>";
-					}
-				});
-			}
-		});
-	</script>
-	<h2>攻击范围</h2>
-	<div style="display: grid; grid-template-columns: repeat(9, 1fr); grid-template-rows: repeat(7, 1fr);">
-		<div style="background-color: white; grid-column: 2 / 4; grid-row: 2 / 4;"></div>
-		<div style="border: 1px solid black; grid-column: 1 / 3; grid-row: 1 / 3;"></div>
-		<div style="border: 1px solid black; grid-column: 3 / 5; grid-row: 1 / 3;"></div>
-		<div style="border: 1px solid black; grid-column: 4 / 6; grid-row: 3 / 5;"></div>
-		<div style="border: 1px solid black; grid-column: 3 / 5; grid-row: 5 / 7;"></div>
-		<div style="border: 1px solid black; grid-column: 1 / 3; grid-row: 5 / 7;"></div>
-		<div style="border: 1px solid black; grid-column: 6 / 8; grid-row: 1 / 3;"></div>
-		<div style="border: 1px solid black; grid-column: 7 / 9; grid-row: 3 / 5;"></div>
-		<div style="border: 1px solid black; grid-column: 6 / 8; grid-row: 5 / 7;"></div>
+	<div style="display: flex; flex-direction: row;">
+		<div style="flex: 1;">
+			<h2>基础属性</h2>
+			<ul>
+				<li>生命值：<input type="number" name="health" value="100"></li>
+				<li>攻击力：<input type="number" name="attack" value="50"></li>
+				<li>防御力：<input type="number" name="defense" value="20"></li>
+				<li>法术抗性：<input type="number" name="magic_resistance" value=""></li>
+				<li>阻挡数：<input type="number" name="block" value="1"></li>
+				<li>部署费用：<input type="number" name="cost" value="10"></li>
+				<li>再部署时间：
+					<select name="respawn_time">
+						<option value="very_fast">非常快</option>
+						<option value="fast">快</option>
+						<option value="medium">中等</option>
+						<option value="slow">慢</option>
+						<option value="very_slow">非常慢</option>
+					</select>
+				</li>
+				<li>攻击速度：
+					<select name="attack_speed">
+						<option value="very_fast">非常快</option>
+						<option value="fast">快</option>
+						<option value="medium">中等</option>
+						<option value="slow">慢</option>
+						<option value="very_slow">非常慢</option>
+					</select>
+				</li>
+			</ul>
+<h2>潜能</h2>
+<ul>
+	<li>潜能等级2：<input type="text" name="potential_1" value=""></li>
+	<li>潜能等级3：<input type="text" name="potential_2" value=""></li>
+	<li>潜能等级4：<input type="text" name="potential_3" value=""></li>
+	<li>潜能等级5：<input type="text" name="potential_4" value=""></li>
+	<li>潜能等级6：<input type="text" name="potential_5" value=""></li>
+</ul>
+		</div>
+		<div id="attack_range" style="flex: 1;">
+			<h2>攻击范围</h2>
+			<script src="js/atk_range.js"></script>
+			</div>
+			<h2>分支</h2>
+			
+		<div style="flex: 1;">
+			<h2>技能</h2>
+			<label for="skill_num">技能个数：</label>
+			<input type="number" id="skill_num" name="skill_num" min="0" max="3" value="3"><br><br>
+			<div id="skill_input"></div>
+			<script src="js/skill.js"></script>
+		</div>
+		<div style="flex: 1;">
+			<h2>天赋</h2>
+			<label for="talent_num">天赋个数：</label>
+			<input type="number" id="talent_num" name="talent_num" min="0" max="2" value="2"><br><br>
+			<div id="talent_input"></div>
+			<script  src="js/talent.js">
+			</script>
+		</div>
 	</div>
-	<h2>天赋</h2>
-	<label for="talent_num">天赋个数：</label>
-	<input type="number" id="talent_num" name="talent_num" min="0" max="10" value="2"><br><br>
-	<div id="talent_input"></div>
-	<script>
-		document.getElementById("talent_num").addEventListener("change", function() {
-			var talent_num = document.getElementById("talent_num").value;
-			var talent_input = document.getElementById("talent_input");
-			talent_input.innerHTML = "";
-			for (var i = 1; i <= talent_num; i++) {
-				talent_input.innerHTML += "<h3>天赋" + i + "</h3><label for='talent_name_" + i + "'>天赋名称：</label><input type='text' id='talent_name_" + i + "' name='talent_name_" + i + "'><br><label for='talent_content_" + i + "'>天赋内容：</label><input type='text' id='talent_content_" + i + "' name='talent_content_" + i + "'><br><br>";
-			}
-		});
-	</script>
 </body>
 </html>
